k8s_yaml/deployment_sanitized.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodedockerdemo
spec:
  selector:
    matchLabels:
      app: nodedockerdemo
      tier: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: nodedockerdemo
        tier: frontend
    spec:
      containers:
      - name: nodedockerdemo
        image: website.com/repository-name/nodedockerdemo:latest
        resources:
        ports:
        - containerPort: 3000
