k8s_yaml/service_sanitized.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodedockerdemo-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: nodedockerdemo
  type: ClusterIP
