k8s_yaml/ingress_sanitized.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodedockerdemo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: website.com
      http:
        paths:
          - path:
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodedockerdemo-service
                port:
                  number: 3000
